verif/test/deca/syntax/invalid/reserved-keyword-variable-name-verif.res
src/test/deca/syntax/invalid/reserved-keyword-variable-name.deca:10:8: no viable alternative at input 'while'
